--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "005c1c6f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,8 @@
     "import seaborn as sns \n",
     "from sklearn.model_selection import train_test_split \n",
     "from pandas.core.common import random_state\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "d7908832",
    "metadata": {},
    "outputs": [
@@ -201,7 +202,7 @@
        "4              2.2  39891.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "ace509c9",
    "metadata": {},
    "outputs": [
@@ -299,7 +300,7 @@
        "max          10.500000  122391.000000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "a3e8406f",
    "metadata": {},
    "outputs": [
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "b25facb3",
    "metadata": {},
    "outputs": [
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "2e200c89",
    "metadata": {},
    "outputs": [
@@ -392,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "04142627",
    "metadata": {},
    "outputs": [],
@@ -403,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "f6fb3ff2",
    "metadata": {},
    "outputs": [],
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "891a17ac",
    "metadata": {},
    "outputs": [
@@ -1005,7 +1006,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "5c820631",
    "metadata": {},
    "outputs": [],
@@ -1028,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "3bf05234",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "5c90de0c",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "9b6a1b26",
    "metadata": {},
    "outputs": [
@@ -1100,6 +1101,92 @@
    "source": [
     "print(f\"Coefficient: {regressor.coef_}\")\n",
     "print(f\"Intercept: {regressor.intercept_}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "a19f7fc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error :  5221.078554315732\n"
+     ]
+    }
+   ],
+   "source": [
+    "#from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "mae = mean_absolute_error(y_train, y_pred_train)\n",
+    "print(\"Mean Absolute Error : \",mae)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "fc53cf1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error :  6012.459573099956\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "import numpy as np\n",
+    "\n",
+    "mse = mean_squared_error(y_train, y_pred_train)\n",
+    "rmse = np.sqrt(mse)\n",
+    "print(\"Root Mean Squared Error : \",rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a5479154",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error :  5221.078554315732\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "mae = mean_absolute_error(y_train, y_pred_train)\n",
+    "print(\"Mean Absolute Error : \",mae)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "69d41439",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² Score :  0.9411949620562126\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "r2 = r2_score(y_train, y_pred_train)\n",
+    "print(\"R² Score : \",r2)"
    ]
   }
  ],
